# joinlines

./: Cargo.toml  Makefile  README.md
resources/: expected2.txt
src/: main.rs
